# spec-tools

./: .specallowlist  .specignore  CHANGELOG.md  CLAUDE.md  DSL_ANALYSIS.md  FEATURES.md  LINTER_CONSOLIDATION_ANALYSIS.md  MIGRATION-SCHEMA-TO-DSL.md  PUBLISHING.md  PYPI_SETUP.md  README.md  RELEASE_PROCESS.md  pyproject.toml  research-markdown-libraries.md
.claude/: settings.json
.claude/hooks/: session-start
.github/workflows/: README.md  ci.yml  create-release.yml  prepare-release.yml  publish.yml  version-check.yml
.spec-types/: config.yaml
.spec-types/modules/: requirement.yaml
context/technical-notes/: TN-001.md  TN-002.md  TN-003.md  TN-004.md  TN-005.md
hooks/: parse_ci_workflow.py  pre-commit
spec_check/: __init__.py  __main__.py  ast_parser.py  cli.py  linter.py  markdown_link_validator.py  markdown_schema_validator.py  spec_coverage_linter.py  structure_linter.py  unique_specs_linter.py
spec_check/dsl/: __init__.py  builtin_types.py  id_registry.py  layers.py  models.py  reference_extractor.py  reference_resolver.py  registry.py  section_tree.py  validator.py
spec_tools/: __init__.py  cli.py  config.py  linter.py  llm_provider.py  markdown_link_validator.py  markdown_schema_validator.py  semantic_test_analyzer.py  semantic_test_result.py  spec_coverage_linter.py  structure_linter.py  unique_specs_linter.py
spec_tools/dsl/: __init__.py  builtin_types.py  id_registry.py  layers.py  models.py  reference_extractor.py  reference_resolver.py  registry.py  section_tree.py  type_definitions.py  validator.py
spec_types/: __init__.py
specs/: README.md  markdown-link-validator.md  markdown-schema-validator.md  principles.md  semantic-test-adherence.md  spec-000-spec-driven-development.md  spec-001-linter-tool.md  spec-002-architecture.md  spec-coverage-linter.md
specs/architecture/solutions/: SOL-001.md
specs/design/: IMP-001.md
specs/future/: pydantic-type-definitions.md  semantic-test-adherence.md  specification-dsl.md
specs/jobs/: JOB-001.md  JOB-002.md  JOB-003.md  JOB-004.md  markdown-link-validator.md  markdown-schema-validator.md  spec-coverage-linter.md
specs/requirements/: REQ-001.md  REQ-002.md  REQ-003.md  REQ-004.md  REQ-005.md  REQ-006.md
specs/vision/: VIS-001.md
technical-notes/: dsl-type-definition-schema.md  issue-42-investigation.md  llm-provider-selection.md  specification-dsl-design.md
test-project/: .gitignore  .specallowlist  README.md  main.py  pyproject.toml
test-project/docs/: guide.md
tests/: __init__.py  test_JOB_001.py  test_JOB_002.py  test_JOB_003.py  test_REQ_001.py  test_REQ_002.py  test_REQ_003.py  test_REQ_004.py  test_REQ_005.py  test_ast_parser.py  test_cli.py  test_config.py  test_dsl_coverage.py  test_dsl_integration.py  test_dsl_pydantic.py  test_gherkin_validation.py  test_integration.py  test_jobs.py  test_linter.py  test_markdown_link_validator.py  test_markdown_schema_validator.py  test_new_document_types.py  test_requirements.py  test_spec_coverage_linter.py  test_structure_linter.py  test_unique_specs_linter.py
tests/fixtures/dsl_projects/invalid_project/.spec-types/: config.yaml
tests/fixtures/dsl_projects/invalid_project/.spec-types/modules/: adr.yaml  contract.yaml  requirement.yaml
tests/fixtures/dsl_projects/invalid_project/specs/contracts/: CTR-001.md
tests/fixtures/dsl_projects/invalid_project/specs/requirements/: REQ-001.md  REQ-002.md  REQ-003.md  REQ-004.md  REQ-005.md
tests/fixtures/dsl_projects/valid_project/.spec-types/modules/: contract.yaml
tests/fixtures/dsl_projects/valid_project_py/spec_types/: __init__.py
tests/fixtures/dsl_projects/valid_project_py/specs/adrs/: ADR-001.md
tests/fixtures/dsl_projects/valid_project_py/specs/contracts/: CTR-001.md
tests/fixtures/dsl_projects/valid_project_py/specs/requirements/: REQ-001.md  REQ-002.md
tests/fixtures/projects/complex_system/specs/: api.md  authentication.md
tests/fixtures/projects/complex_system/specs/jobs/: user-management.md
tests/fixtures/projects/complex_system/tests/: test_api.py  test_authentication.py
tests/fixtures/projects/edge_cases/specs/: broken-links.md  code-block-confusion.md  duplicate-ids.md  malformed-ears.md  missing-metadata.md  partial-requirements.md
tests/fixtures/projects/edge_cases/tests/: test_orphaned.py
tests/fixtures/projects/simple_ecommerce/specs/: shopping-cart.md
tests/fixtures/projects/simple_ecommerce/tests/: test_shopping_cart.py
