[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "spec-tools"
version = "0.1.0"
description = "Tools for spec-driven development"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "spec-tools contributors"}
]
dependencies = [
    "markdown-it-py>=4.0.0",
    "pathspec>=0.11.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
spec-tools = "spec_tools.cli:main"
spec-lint = "spec_tools.cli:main"

# Ruff linter configuration
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["spec_tools"]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "req: marks tests as linked to specific requirements (e.g., @pytest.mark.req('REQ-001'))"
]

# Coverage configuration
[tool.coverage.run]
source = ["spec_tools"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# spec-tools configuration (dogfooding our own tool!)
[tool.spec-tools.lint]
allowlist = ".specallowlist"
use_gitignore = true

[tool.spec-tools.check-coverage]
min_coverage = 49.0

[tool.spec-tools.check-schema]
use_gitignore = true
